packages/cashc/test/compiler/ParseError/incorrect_scientific_notation.cash
contract Test() {
    function hello() {
        require(1000 == 1e-3);
    }
}
